[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/board/Battlefield.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/board/Board.gd" type="Script" id=2]
[ext_resource path="res://scenes/board/BottomPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/board/TopPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/board.png" type="Texture" id=5]

[node name="Board" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 194, 268 )
texture = ExtResource( 5 )

[node name="Top" parent="." instance=ExtResource( 4 )]
position = Vector2( -96, 0 )

[node name="Battlefield" parent="." instance=ExtResource( 1 )]
position = Vector2( -16, 128 )

[node name="Bottom" parent="." instance=ExtResource( 3 )]
position = Vector2( 96, 480 )

[connection signal="bench_tile_selected" from="Top" to="." method="_on_Top_bench_tile_selected"]
[connection signal="grave_tile_selected" from="Top" to="." method="_on_Top_grave_tile_selected"]
[connection signal="tile_selected" from="Battlefield" to="." method="_on_Battlefield_tile_selected"]
[connection signal="bench_tile_selected" from="Bottom" to="." method="_on_Bottom_bench_tile_selected"]
[connection signal="grave_tile_selected" from="Bottom" to="." method="_on_Bottom_grave_tile_selected"]
